# UAVTrafficPy

./: .pylintrc  README.md  analyser.py  distances.py  main_test.ipynb  pyproject.toml  requirements.txt
.github/workflows/: build_paper.yml  build_paper_pdf.yml  pylint.yml
DatasetExample/: DataExamplePneuma.py  dataset_example.py  dataset_example_pNEUMA.py
mytool/: UAVTrafficTool.py  __init__.py  analyser.py  core.py  dataloader.py  uav_traffic_tool.py  visualizer.py
paper/: paper.bib  paper.md
tests/: dataload_example.py  intersection_pipeline_test.ipynb  test_1.py  test_visualization_analysis.py  visualization_test.ipynb
tool/: uavtrafficpy.py
usage example/: intersection_pipeline_example.ipynb  intersection_pipeline_test.ipynb
usage_example/: intersection_pipeline_example.ipynb
