[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uav_traffic_tool"
version = "0.1.0"
description = "A Python library for UAV-based traffic data analysis"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "numpy",
    "matplotlib",
    "pandas",
    "scipy",
    "shapely",
    "scikit-learn"
]
requires-python = ">=3.8"

[tool.setuptools]
packages = ["uav_traffic_tool"]

[project.urls]
"Homepage" = "https://github.com/yourusername/uav_traffic_tool"
