[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "UAVTrafficPy"
version = "1.0.0"
description = "Package for analysis & visualization of UAV-based Traffic data in Python"
authors = [
    { name = "Konstantinos Pourgourides", email = "kotsiosp2001@gmail.com" }
]
dependencies = [
    "numpy",
    "matplotlib",
    "pandas",
    "scipy",
    "shapely",
    "scikit-learn"
]
requires-python = ">=3.12"

[tool.setuptools]
packages = ["tool","tests","usage_example"]

[tool.pylint."MESSAGES CONTROL"]
disable = ["W0102"]

[project.urls]
"Homepage" = "https://github.com/KPourgourides/UAVTrafficPy"

